# TP_Final_Grupo_02

data_files/input/: IRI_Consultas.csv  IRI_Contactos.csv  IRI_Medicos.csv  IRI_ObraSocial.csv  IRI_Pacientes.csv
data_files/output/: IRI_Pacientes_Archivados.csv
iri/: iri.cpp
libreria/: Datos.h  Funciones.cpp  datos.h  funciones.cpp  funciones.h
main/: CMakeLists.txt  main.cpp
unit-test/: casos_base.cpp  main_test.cpp
